# systemc-devenv

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test.yml  style-checks.yml
docs/: PLANNING.md  PRIME_DIRECTIVE.md  TEMPLATE_VS_PRODUCT.md
docs/agents/: CHAT_INIT.md  GETTING_STARTED.md
docs/developer/: getting-started.md
model/views/approximately_timed/: README.md
model/views/cycle_accurate/: hello_main.cpp  hello_module.hpp
model/views/loosely_timed/: README.md
verification/systemc/smoke/: smoke_test.cpp
